# handson-llm

./: .gitignore  CLAUDE.md  Chapter 1 - Introduction to Language Models.ipynb  GLOSSARY.md  README.md  chapter01.ipynb  chapter02.ipynb  chapter03.ipynb  chapter04.ipynb  chapter05.ipynb  chapter06.ipynb  chapter07.ipynb  chapter08.ipynb  chapter09.ipynb  chapter10.ipynb  chapter11.ipynb  chapter12.ipynb  pyproject.toml
.serena/: project.yml
.serena/memories/: development_guidelines.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
configs/: .env.example
docs/ccsc/: CLAUDE.md
docs/gcsg/: GEMINI.md
practice/: model.ipynb  model.py
rag/: ingest.py  qa.py  search.py
