[project]
name = "handson-llm"
version = "0.1.0"
description = "Practice LLM"
requires-python = ">=3.13"
dependencies = [
    "bertopic>=0.17.3",
    "cohere>=5.17.0",
    "datamapplot>=0.6.3",
    "datasets>=4.0.0",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.12.0",
    "hdbscan>=0.8.40",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.30",
    "pandas-stubs==2.3.0.250703",
    "rank-bm25>=0.2.2",
    "seqeval>=1.2.2",
    "setfit>=1.1.3",
    "transformers==4.48.3",
    "trl==0.16.1",
    "umap-learn>=0.5.9.post2",
]
